--- a/src/main/resources/static/navtoggle.html
+++ b/src/main/resources/static/navtoggle.html
@@ -123,7 +123,7 @@
 <!-- Sidebar -->
 <div id="sidebar">
   <a href="#">아이 프로필 변경</a>
-  <a href="#">아이정보 보기</a>
+  <a href="/children/">아이정보 보기</a>
   <a href="/userpage">계정보기</a>
   <a href="#">최근 책 보기</a>
   <a href="/ChildFavorBookList.html">좋아요 누른 책 보기</a>
@@ -131,11 +131,6 @@
   <a href="/lottery/form">선착순 이벤트</a>
 </div>
 
-<!-- Main Content -->
-<div id="main-content" class="container mt-5">
-  <h1>메인페이지</h1>
-  <p>여기는 메인페이지 내용이 들어가는 곳입니다. 왼쪽 상단의 토글 버튼을 눌러 메뉴를 열 수 있습니다.</p>
-</div>
 
 <!-- JavaScript for sidebar toggle -->
 <script>
