--- a/src/main/resources/static/ChildFavorBookList.html
+++ b/src/main/resources/static/ChildFavorBookList.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>아동 좋아하는 책 목록</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <title>Book List</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body>
-
 <div class="container mt-5">
-    <h2>좋아요 책 목록</h2>
-
-    <div id="bookListContainer" style="display: flex; flex-wrap: wrap; gap: 20px;"></div>
-
+    <div id="book-list" class="row">
+        <!-- 책 목록이 여기에 동적으로 추가됩니다. -->
+    </div>
 </div>
+
+<script>
+
+</script>
 </body>
 </html>
